--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Headlines - The Lorem Ipsum
 </h1>
 <nav>
     <a href="index.html">Headlines</a>
-    <a href="/contact.html">Contact</a>
+    <a href="./contact.html">Contact</a>
 
 </nav>
   </header>  
